--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,15 +7,12 @@ website:
   navbar:
     right:
       - about.qmd
-      - test.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+        href: https://github.com/whuhzx
+
 format:
   html:
     theme: Simplex
     css: styles.css
 
 editor: visual
-
